# ftl

./: Cargo.toml  navmesh.txt
client/: Cargo.toml
client/src/: egui_common.rs  egui_panels.rs  graphics.rs  interaction.rs  lib.rs  main.rs  select.rs  selection.rs  targeting.rs
client/src/graphics/: crew.rs  mod.rs
client/src/pointer/: mod.rs  selection.rs  targeting.rs
common/: Cargo.toml
common/src/: bullets.rs  events.rs  intel.rs  lib.rs  lobby.rs  nav.rs  pathing.rs  projectiles.rs  replicate_resource.rs  ship.rs  systems.rs  util.rs  weapon.rs
server/: Cargo.toml
server/src/: _pathing.rs  bullets.rs  engines.rs  events.rs  main.rs  oxygen.rs  projectiles.rs  reactor.rs  shields.rs  ship.rs  ship_system.rs  this_also_works.rs  this_works.rs  weapons.rs
