[workspace]
resolver = "2"
members = ["common", "client", "server"]

[workspace.dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "serialize",
] }
bevy_replicon = "0.26.3"
bevy_replicon_renet = { version = "0.3.0", features = ["renet_transport"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
strum = "0.26"

# The following optimization levels are recommended by Bevy to speed iteration

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
