[workspace]
resolver = "2"
members = ["common", "client", "server"]

[workspace.dependencies]
bevy = { version = "0.15", default-features = false, features = ["serialize"] }
bevy_replicon = { version = "0.29", default-features = false }
bevy_replicon_renet = { version = "0.6", default-features = false }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
strum = "0.26"

# The following optimization levels are recommended by Bevy to speed iteration

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
