[workspace]
resolver = "2"
members = ["common", "client", "server"]

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_remote",
    "serialize",
] }
bevy_replicon = { version = "0.37", default-features = false }
bevy_replicon_renet = { version = "0.13", default-features = false }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
strum = "0.27"

# [profile.dev.package."*"]
# opt-level = 3
