[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "png",
    "serialize",
] }
bevy_egui = "0.27.0"
bevy_replicon = { workspace = true }
bevy_replicon_renet = { workspace = true }
bevy_mod_picking = { version = "0.19.1", default-features = false, features = [
    "backend_bevy_ui",
    "backend_egui",
    "backend_sprite",
    "debug",
] }
common = { path = "../common" }
is-even = "1.0.0"
rand = { workspace = true }
