[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "serialize",
] }
bevy_egui = "0.31"
bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet = { workspace = true, features = ["renet_netcode"] }
common = { path = "../common" }
is-even = "1"
leafwing-input-manager = "0.16"
rand = { workspace = true }
strum = { workspace = true }
