[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "png",
    "serialize",
] }
bevy_egui = "0.37"
bevy_replicon = { workspace = true, features = ["client"] }
bevy_replicon_renet = { workspace = true, features = [
    "client",
    "renet_netcode",
] }
common = { path = "../common" }
is-even = "1"
leafwing-input-manager = "0.18"
rand = { workspace = true }
strum = { workspace = true }
