[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true, features = ["server"] }
bevy_replicon_renet = { workspace = true }
nonempty-collections = { git = "https://github.com/fosskers/nonempty-collections", features = [
    "serde",
] }
serde = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[features]
server = ["bevy_replicon/server"]
